force-app/main/default/objects/HDT_ScriptPerCommOffer__mdt/HDT_ScriptPerCommOffer__mdt.object-meta.xml
<CustomObject>
    <label>Script Per Offerta Commerciale</label>
    <pluralLabel>Script Per Offerta Commerciale</pluralLabel>
</CustomObject>