force-app/main/default/objects/HDT_ScriptPerCommOffer__mdt/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <label>Codice Offerta Ordine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>