force-app/main/default/objects/HDT_ScriptPerCommOffer__mdt/fields/OfferName__c.field-meta.xml
<CustomField>
    <fullName>OfferName__c</fullName>
    <label>Nome Offerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>