force-app/main/default/objects/HDT_ScriptPerCommOffer__mdt/fields/ScriptName__c.field-meta.xml
<CustomField>
    <fullName>ScriptName__c</fullName>
    <label>Nome Script</label>
    <length>255</length>
    <type>Text</type>
</CustomField>