force-app/main/default/objects/HDT_ScriptPerCommOffer__mdt/fields/SignatureMethod__c.field-meta.xml
<CustomField>
    <fullName>SignatureMethod__c</fullName>
    <label>Metodo Firma Ordine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vocal Order</fullName>
            </value>
            <value>
                <fullName>OTP Remoto</fullName>
            </value>
            <value>
                <fullName>OTP Coopresenza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>